; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_storage_common.c_fsg_show_ro.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/function/extr_storage_common.c_fsg_show_ro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsg_lun = type { i32, i32 }

@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fsg_show_ro(%struct.fsg_lun* %0, i8* %1) #0 {
  %3 = alloca %struct.fsg_lun*, align 8
  %4 = alloca i8*, align 8
  store %struct.fsg_lun* %0, %struct.fsg_lun** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.fsg_lun*, %struct.fsg_lun** %3, align 8
  %7 = call i64 @fsg_lun_is_open(%struct.fsg_lun* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.fsg_lun*, %struct.fsg_lun** %3, align 8
  %11 = getelementptr inbounds %struct.fsg_lun, %struct.fsg_lun* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.fsg_lun*, %struct.fsg_lun** %3, align 8
  %15 = getelementptr inbounds %struct.fsg_lun, %struct.fsg_lun* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi i32 [ %12, %9 ], [ %16, %13 ]
  %19 = call i32 @sprintf(i8* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %18)
  ret i32 %19
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @fsg_lun_is_open(%struct.fsg_lun*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
